--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "type_the_rainbow",
+  "homepage": "https://github.com/MikeMac15/type_the_rainbow.git",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-router/node": "^7.4.0",
     "@react-router/serve": "^7.4.0",
     "isbot": "^5.1.17",
+    "openai": "^4.91.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0"
@@ -19,11 +23,19 @@
   "devDependencies": {
     "@react-router/dev": "^7.4.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "gh-pages": "^6.3.0",
+    "jest": "^29.7.0",
     "react-router-devtools": "^1.1.0",
+    "react-test-renderer": "^19.0.0",
     "tailwindcss": "^4.0.0",
+    "ts-jest": "^29.3.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
